# tech-help

./: .gitignore  CMakeLists.txt  README.md  spec.md  vcpkg.json
.github/workflows/: build.yml
install/: config.example.json  install.ps1
lang/: en.json  template.json
skills/conversion-skill/: SKILL.md
skills/daily-index-skill/: SKILL.md
skills/daily-sync-skill/: SKILL.md
src/core/: CMakeLists.txt  config.cpp  config.h  image_compress.cpp  image_compress.h  office_convert.cpp  office_convert.h  process_file.cpp  process_file.h  strings.cpp  strings.h
src/core-cli/: CMakeLists.txt  main.cpp
src/email-watcher/: CMakeLists.txt  imap_client.cpp  imap_client.h  log.cpp  log.h  main.cpp  mime.cpp  mime.h  office_convert.cpp  office_convert.h  print_job.cpp  print_job.h  smtp_client.cpp  smtp_client.h  state.cpp  state.h
src/mcp-server/: README.md  config.py  process_runner.py  requirements.txt  server.py  summarizer.py
src/office/: README.md  convert.py
src/ui/: CMakeLists.txt  main.cpp
vcpkg-triplets/: x64-windows.cmake
